fixed problems with Module.mk and CMakeLists.txt
- added LinkDef.h
- changed instructions to build .pcm file (not sure how)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(headers TJob.h TMultiProcess.h TNote.h TPool.h TServer.h)
 
 set(sources TJob.cxx TMultiProcess.cxx TNote.cxx TPool.cxx TServer.cxx)
 
-ROOT_GENERATE_DICTIONARY(G__MultiProc ${headers} STAGE1 MODULE MultiProc)
+ROOT_GENERATE_DICTIONARY(G__MultiProc ${headers} MODULE MultiProc LINKDEF LinkDef.h)
 
 ROOT_OBJECT_LIBRARY(MultiProcObjs ${sources} G__MultiProc.cxx)
-ROOT_LINKER_LIBRARY(MultiProc $<TARGET_OBJECTS:MultiProcObjs> LIBRARIES  ${CMAKE_THREAD_LIBS_INIT} DEPENDENCIES Core Net)
+ROOT_LINKER_LIBRARY(MultiProc $<TARGET_OBJECTS:MultiProcObjs> DEPENDENCIES Core Net)
 ROOT_INSTALL_HEADERS(${installoptions})
