--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@
 ROOT_USE_PACKAGE(core)
 ROOT_USE_PACKAGE(net)
 
-set(headers TJob.h TMultiProcess.h TNote.h TPool.h TServer.h)
+set(headers TJob.h TMultiProcess.h TNote.h TPool.h TServer.h TLocalServer.h)
 
-set(sources TJob.cxx TMultiProcess.cxx TNote.cxx TPool.cxx TServer.cxx)
+set(sources TJob.cxx TMultiProcess.cxx TNote.cxx TPool.cxx TServer.cxx TLocalServer.cxx)
 
 ROOT_GENERATE_DICTIONARY(G__MultiProc ${headers} MODULE MultiProc LINKDEF LinkDef.h)
 
